[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "uNBT"
description = "Simple NBT manipulation library"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/Metaray/uNBT"

[tool.setuptools]
packages = ["uNBT"]

[tool.setuptools.package-data]
"*" = ["*.pyi", "py.typed"]

[tool.setuptools.dynamic]
version = {attr = "uNBT.__version__"}
